More minor fixes, fix x overflow issue

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -9,52 +9,42 @@
 
 // STYLE THE CONTACT-BOX CONTENT
 .contact-box {
-  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-  &__icon {
-    width: 2rem;
-    stroke: v.$primary;
-    padding-top: 0.5rem;
-
-    @include m.sm-breakpoint-up() {
-      width: 4rem;
-    }
+  .fa {
+    color: v.$primary;
   }
 
+  .info {
+    margin-left: 1rem;
 
-  &__info {
-    padding: 0.4rem;
-    font-weight: 600;
-
-
-
-    &--title {
-      color: v.$white;
+    a {
+      font-size: 0.8rem;
+      font-weight: 600;
+      color: v.$gray-600;
       text-decoration: none;
+    }
+
+    a.title {
+      color: v.$white;
       font-size: 1rem;
 
       @include m.sm-breakpoint-up() {
         font-size: 1.4rem;
       }
-
     }
 
-    &--subtitle {
-      font-size: 0.8rem;
-      color: v.$gray-600;
-      text-decoration: none;
-
-      @include m.sm-breakpoint-up() {
-        font-size: 1rem;
-      }
-
+    p {
+      margin-bottom: 0;
     }
   }
+
 }
 
 // STYLE THE SOCIAL MEDIA CONTENT
 .footer-sm {
-
 
   a {
     color: v.$white;
@@ -75,26 +65,6 @@
   }
 }
 
-// STYLE THE CAMPANY INFO CONTENT
-.campany-list {
-  display: block;
-  list-style-type: none;
-  position: relative;
-
-  li {
-    margin-bottom: 0.5rem;
-    text-decoration: none;
-
-    a {
-      color: v.$white;
-      text-decoration: none;
-
-      &:hover {
-        color: v.$primary;
-      }
-    }
-  }
-}
 
 // STYLE THE COPYRIGHT  CONTENT
 .footer-bottom {
